Added date select field - 23/03/2015

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,9 +50,13 @@
   margin: 0px auto 20px auto;
 }
 
-#server-metrics #server-select {
+#server,  #date {
   color: #5555AA;
-  width: 75%;
+  width: 50%;
+}
+
+#server-date {
+  margin-top: 10px;
 }
 
 #image {
