--- a/views/index.jade
+++ b/views/index.jade
@@ -15,9 +15,9 @@ block content
         .col-md-4.col-sm-12
           #server-metrics 
             p Please select a server
-            p#server-select
+            #server-select
             p#server-date
-            p#date-select
+            #date-select
 
       .row
         #how-to
