Added all five server diagrams - 25/03/2015

--- a/public/stylesheets/server_metrics.css
+++ b/public/stylesheets/server_metrics.css
@@ -6,5 +6,33 @@
   height: 500px;
   width: 80%;
   display: block;
-  margin: 0px auto 0px auto;
+  margin: 0px auto 50px auto;
+}
+
+#mem-metrics {
+  height: 500px;
+  width: 80%;
+  display: block;
+  margin: 0px auto 50px auto;
+}
+
+#disk-metrics {
+  height: 500px;
+  width: 80%;
+  display: block;
+  margin: 0px auto 50px auto;
+}
+
+#netIn-metrics {
+  height: 500px;
+  width: 80%;
+  display: block;
+  margin: 0px auto 50px auto;
+}
+
+#netOut-metrics {
+  height: 500px;
+  width: 80%;
+  display: block;
+  margin: 0px auto 50px auto;
 }
