--- a/views/server_metrics.jade
+++ b/views/server_metrics.jade
@@ -7,6 +7,10 @@ block content
   h1(id='server-metrics-title') Server Metrics for #{server} on #{date} 
 
   #cpu-metrics
+  #mem-metrics
+  #disk-metrics
+  #netIn-metrics
+  #netOut-metrics
 
 block footer
   script(src='/javascripts/server_metrics.js')
@@ -14,54 +18,11 @@ block footer
   script(src='/flot/jquery.flot.time.js')
   script(src='/flot/jquery.flot.selection.js')
   script(src='/flot/jquery.flot.crosshair.js')
+  script(src='/javascripts/plot_graph.js')
+
   script.
-    var data, options, plot, targetDiv;
-    data=#{metrics};
-
-    options= {
-      xaxis: {mode: 'time',minTickSize: [1, 'hour']},
-      crosshair: { mode: 'xy'},
-      selection: { mode: 'x'},
-      grid: {hoverable: true, clickable: true}
-    };  
-
-    targetDiv=$('#cpu-metrics');
-
-    targetDiv.bind("plotselected", function (event, ranges) {
-      $.each(plot.getXAxes(), function(_, axis) {
-        var opts = axis.options;
-        opts.min = ranges.xaxis.from;
-        opts.max = ranges.xaxis.to;
-      });
-      plot.setupGrid();
-      plot.draw();
-      plot.clearSelection();
-    });
-
-    $("<div id='tooltip'></div>").css({
-      position: "absolute",
-      display: "none",
-      border: "1px solid #fdd",
-      padding: "2px",
-      "background-color": "#fee",
-      opacity: 0.80
-    }).appendTo("body");
-
-    targetDiv.bind("plothover", function (event, pos, item) {
-      if (item) {
-        var x = item.datapoint[0].toFixed(2),
-          y = item.datapoint[1].toFixed(2);
-
-        $("#tooltip").html(y + " , " + x)
-          .css({top: item.pageY+10, left: item.pageX+10})
-          .fadeIn(200);
-      } else {
-        $("#tooltip").hide();
-      }
-    });
-
-    targetDiv.dblclick(function() {
-      alert('Show process metrics');
-    });
-
-    plot=$.plot(targetDiv, [{data: data, label: 'CPU Utilisation'}], options);
+    PLOT_GRAPH.plot(#{cpuMetrics},'#cpu-metrics','CPU Utilisation (%)','#5555AA');
+    PLOT_GRAPH.plot(#{memMetrics},'#mem-metrics','Memory Utilisation (%)','#55AA55');
+    PLOT_GRAPH.plot(#{diskMetrics},'#disk-metrics','Disk Utilisation (IO/sec)','#AA5555');
+    PLOT_GRAPH.plot(#{netInMetrics},'#netIn-metrics','Network Traffic In (packets/sec)','#676767');
+    PLOT_GRAPH.plot(#{netOutMetrics},'#netOut-metrics','Network Traffic Out (packets/sec)','#5A5AA5');
